--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,13 @@ autom4te.cache/*
 config.status
 config.h
 configure
-*~
+Makefile
+Makefile.am~
+Makefile.in
+autom4te.cache/*
+config.h
+config.log
+config.status
+configure
+libtool
+stamp-h1
