--- a/help/fr/Makefile.am
+++ b/help/fr/Makefile.am
@@ -1,7 +1,7 @@
 figdir = figures
 docname = bookmarksam
-lang = C
-omffile = gtranslator-C.omf
+lang = fr
+omffile = bookmarksam-fr.omf
 entities = legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
