--- a/help/C/Makefile.am
+++ b/help/C/Makefile.am
@@ -1,7 +1,7 @@
 figdir = figures
 docname = bookmarksam
 lang = C
-omffile = gtranslator-C.omf
+omffile = bookmarksam-C.omf
 entities = legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
